--- a/mywebserverdeploy.yml
+++ b/mywebserverdeploy.yml
@@ -19,3 +19,30 @@ spec:
         image: longquang/webserver
         ports:
         - containerPort: 30344
+        
+        
+# adding service expose deployment
+
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    cloud.google.com/neg: '{"ingress":true}'
+  finalizers:
+  - service.kubernetes.io/load-balancer-cleanup
+  labels:
+    app: ibloginspa
+  name: ibloginspa-service
+  namespace: mywebserver
+spec:
+  externalTrafficPolicy: Cluster
+  ports:
+  - nodePort: 30115
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: ibloginspa
+  sessionAffinity: None
+  type: LoadBalancer
+
