--- a/mywebserverdeploy.yml
+++ b/mywebserverdeploy.yml
@@ -19,6 +19,23 @@ spec:
         image: longquang/webserver
         ports:
         - containerPort: 30344
+---
+apiVersion: "v1"
+kind: "Service"
+metadata:
+  name: "ibloginspa-service"
+  namespace: "mywebserver"
+  labels:
+    app: "ibloginspa"
+spec:
+  ports:
+  - protocol: "TCP"
+    port: 80
+  selector:
+    app: "ibloginspa"
+  type: "LoadBalancer"
+  loadBalancerIP: ""
+
         
         
 
